--- a/accounts-dev.properties
+++ b/accounts-dev.properties
@@ -1,9 +1,9 @@
-accounts.msg=Welcome to the Harpura bank Corporation
-accounts.build-version=2
-accounts.maildetails.hostname=default-accounts@harpurabank.com
-accounts.maildetails.port=9000
-accounts.maildetails.from=defaultmail@harpurabank.com
-accounts.maildetails.subject=Welcome to the Bank::Harpura
-accounts.activebranches[0]=Kolkata
-accounts.activebranches[1]=Haridwar
-accounts.activebranches[2]=Bankok
+account.msg=Welcome to the Harpura bank Corporation
+account.build-version=2
+account.maildetails.hostname=default-account@harpurabank.com
+account.maildetails.port=9000
+account.maildetails.from=defaultmail@harpurabank.com
+account.maildetails.subject=Welcome to the Bank::Harpura
+account.activebranches[0]=Kolkata
+account.activebranches[1]=Haridwar
+account.activebranches[2]=Bankok
