--- a/accounts.properties
+++ b/accounts.properties
@@ -1,9 +1,9 @@
-accounts.msg=Welcome to the Harpura bank Corporation
-accounts.build-version=3
-accounts.maildetails.hostname=default-accounts@harpurabank.com
-accounts.maildetails.port=9090
-accounts.maildetails.from=defaultmail@harpurabank.com
-accounts.maildetails.subject=Welcome to the Bank::Harpura
-accounts.activebranches[0]=Mumbai
-accounts.activebranches[1]=Harpura
-accounts.activebranches[2]=Delhi
+account.msg=Welcome to the Harpura bank Corporation
+account.build-version=3
+account.maildetails.hostname=default-account@harpurabank.com
+account.maildetails.port=9090
+account.maildetails.from=defaultmail@harpurabank.com
+account.maildetails.subject=Welcome to the Bank::Harpura
+account.activebranches[0]=Mumbai
+account.activebranches[1]=Harpura
+account.activebranches[2]=Delhi
